# polarengine-vllm

./: README.md  app.py  pyproject.toml  setup.py
benchmarks/: benchmark_nemotron_shapes.py
blog/: polarquant-blog.md
docs/: expert_offloading_design.md
examples/: quantize_model.py  serve_model.py
ggml-integration/: polar-quant.md  polar_quants.c  polar_quants.h  polarquant-q3.patch  test_polar.c
notebooks/: full_pipeline_test.ipynb
polarengine_vllm/: __init__.py  cli.py  compressed_tensors_export.py  config.py  expert_cache.py  expert_cache_lfru.py  expert_offload.py  hf_integration.py  linear_method.py  loader.py  moe_method.py  nemotron_offload.py  packing.py  polar_model.py  quantizer.py  utils.py  vllm_patcher.py  weight_converter.py
polarengine_vllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polarengine_vllm/cli/: __init__.py  cmd_arena.py  cmd_bench.py  cmd_chat.py  cmd_collection.py  cmd_demo.py  cmd_finetune.py  cmd_gguf.py  cmd_info.py  cmd_llamacpp.py  cmd_mlx.py  cmd_monitor.py  cmd_quantize.py  cmd_serve.py  cmd_vllm_kv.py  main.py
polarengine_vllm/kernels/: __init__.py  fwht.py  fwht_train.py  gla_retention.py  polar_gemm.py  polar_gemv.py  polar_gemv_splitk.py  polar_quantize.py
polarengine_vllm/kernels/cuda/: __init__.py  fwht_cuda.cu  polar_gemv_cuda.cu  setup_cuda.py
polarengine_vllm/kv_cache/: README.md  __init__.py  attention.py  benchmark.py  cache.py  config.py  test_polar_kv.py  triton_kernels.py
polarquant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/: README.md  eoq.md  nemotron-offload.md  polarquant-arena.md  polarquant-auto.md  polarquant-bench.md  polarquant-collection.md  polarquant-finetune.md  polarquant-gguf.md  polarquant-inference.md  polarquant-llamacpp.md  polarquant-mlx.md  polarquant-monitor.md  polarquant-multi.md  polarquant-serve.md  polarquant-video.md  polarquant-vllm-kv.md  polarquant.md
tests/: conftest.py  test_config.py  test_expert_offload.py  test_fwht.py  test_kernel_correctness.py  test_lfru.py  test_packing.py  test_utils.py
